{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 349,
  "lineage": "128181ee-c1b5-97c9-8cc8-5e360445c338",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:internet-gateway/igw-0194fbe063e4f426f",
            "id": "igw-0194fbe063e4f426f",
            "owner_id": "058264225399",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "InternetGatewayConnect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0194fbe063e4f426f",
            "id": "r-rtb-0bc905bd17c04dfcb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.gateway",
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:route-table/rtb-0bc905bd17c04dfcb",
            "id": "rtb-0bc905bd17c04dfcb",
            "owner_id": "058264225399",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0194fbe063e4f426f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09322ee7c058b8153",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-01d4ec83b14da465a"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b4888618d6ea03",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-03693d5a9e05d133c"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3359db5f4d4db75",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-02c18df958a62c0ba"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea6dac87dc6bda5",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-0e877f96ec5fa2b9f"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c376176b48aeffa2",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-0edd2b81c5f64cc3f"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9693ed501c4c236",
            "route_table_id": "rtb-0bc905bd17c04dfcb",
            "subnet_id": "subnet-0d0c0d54638a61b5e"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:security-group/sg-029945b6601d282a6",
            "description": "Security group for coord worker instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-029945b6601d282a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WorkerSecurityGroup",
            "name_prefix": "",
            "owner_id": "058264225399",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-01d4ec83b14da465a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "12.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d4ec83b14da465a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-03693d5a9e05d133c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03693d5a9e05d133c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-02c18df958a62c0ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c18df958a62c0ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0e877f96ec5fa2b9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e877f96ec5fa2b9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0edd2b81c5f64cc3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "12.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd2b81c5f64cc3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0d0c0d54638a61b5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "12.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0c0d54638a61b5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-091b0a6521b810e45"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "engine-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:vpc/vpc-091b0a6521b810e45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-06ddf1987b5e45bb7",
            "default_route_table_id": "rtb-0265c3f40d9d68c2f",
            "default_security_group_id": "sg-01a542abaa331f82f",
            "dhcp_options_id": "dopt-09e0107c46a376f07",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091b0a6521b810e45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0265c3f40d9d68c2f",
            "owner_id": "058264225399"
          }
        }
      ]
    }
  ]
}